fix ie display issue and hide scrollbar

--- a/src/components/template/navbar/index.css
+++ b/src/components/template/navbar/index.css
@@ -1,17 +1,21 @@
 .navbar {
     border-right: #ccc 2px solid;
     width: 100%;
-    height: 100%;
     background: #fff;
     display: block;
-    word-break: break-all;
+    word-break: break-word;
+    height: calc(100vh - 60px);
+    overflow: hidden;
 }
 .navbar ul {
     list-style: none;
-    margin: 0;
     padding: 0;
+    overflow-y: auto;
+    width: calc(100% + 17px);
+    height: 100%;
 }
 .navbar ul li {
+    width: 100%;
     padding: 10px;
     font-size: 16px;
     display: block;
@@ -50,10 +54,6 @@
     text-decoration: underline;
     font-weight: bold;
     color: #000;
-}
-.navbar {
-    height: calc(100vh - 60px);
-    overflow-y: auto;
 }
 .navbar .icon {
     width: 30px;
